fix(ai-governance): harden the audit pack renderer boundary (review feedback)
Two issues raised in review, both about this class trusting things it should
not:

- renderPdf() called the registered renderer with no guard, so an
  implementation that ignored the never-throw contract propagated up to run()
  and marked the whole report Failed -- the exact outcome pluggability was
  meant to prevent -- and a null Optional would have NPE'd the same way. The
  renderer is distribution-supplied, i.e. untrusted from here, so the call is
  now wrapped and any failure degrades to the JSON artifact. The catch is
  deliberately broad: an implementation can also sneaky-throw a checked
  exception, and losing a completed pack is worse than swallowing a stack
  trace into the log.

- complianceRecords() handed back the live list off the governance object.
  As a public snapshot type consumed by external renderers it now returns an
  unmodifiable defensive copy, so neither a caller nor a later mutation of the
  entity can change what an assembled pack reports. Copied via ArrayList
  rather than List.copyOf so a null element -- possible in a deserialised
  entity -- degrades to the renderer instead of throwing during assembly.

Tests: renderer that throws (Pdf and Both) and one that returns null both fall
back to JSON, plus a new AuditPackAssetTest covering both governance shapes,
caller mutation, later mutation of the source list, and the null element.
22 tests passing.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>